--- a/package.json
+++ b/package.json
@@ -13,5 +13,7 @@
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.0.0-beta1"
+  }
 }
