--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "date-fns": "^2.16.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
